src/styles/style.css
@import '../assets/webfonts/red-hat-font.css';

:root {
  --light: #F2FAFF;
  --dark: #252326;
  --blue-1: #4bc6e3;
  --blue-2: #1b6b93;
  --blue-3: #045474;
  --orange: #fb5c04;

  --green: #0DAB76;
  --yellow: #FFC559;
  --red: #FF3A3A;

  --text-colour: var(--dark);
  --background-colour: var(--light);

  --regular-font: 'RedHatDisplay', sans-serif;

  --border: 1px solid var(--text-colour);
  --border-width: 1px solid;

  --transition: all 0.2s;

  color: var(--text-colour);
  background-color: var(--background-colour);
}

body {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  text-align: center;
  font-family: var(--regular-font);
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: var(--background-colour);
  color: var(--text-colour);
}

body.light {
  --text-colour: var(--dark);
  --background-colour: var(--light);
  --border: 1px solid var(--dark);
}

body.dark {
  --text-colour: var(--light);
  --background-colour: var(--dark);
  --border: 1px solid var(--light);
}

.light a {
  color: var(--blue-2);
  text-decoration: inherit;
}

.dark a {
  color: var(--orange);
  text-decoration: inherit;
}

a:hover {
  color: var(--blue-3);
}

.page-heading{
  font-size: xx-large;
  margin: 1rem;
}

.subheading{
  font-size: large;
}

.flex-ctr{
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-ctr-r{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

.flex-ctr-c{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

main{
  margin-inline: 1rem;
}

#app {
  width: 100vw;
}

::selection{
  background-color: var(--text-colour);
  color: var(--background-colour);
}

select:hover{
  cursor: pointer;
}

